# fish-game

./: .gitignore  Cargo.toml  Makefile.toml  README.md  TODO.md  default.nix  dodo.py  flake.nix  index.html  scores.json
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: m5i890m2g4pnyflpn48d1dpzzmwp5q4p-source  nanh96vbcqdwagsz9g21ynlj6cn2bg0i-source  p47g0d893ms5lpg1xr0lp1qc00bl125c-source
.github/workflows/: check.yml  ci.yml  wasm.yml
core/: .gitignore  Cargo.toml  README.md
core/src/: lib.rs
design/: TODO.md  stages.md  state.md
design/v1/: animations.md  stages.md
design/v2/: game_improvements.md  refactoring.md
fish-game-app/: Cargo.toml
fish-game-app/src/audio/: mod.rs
fish-game-app/src/objects/: boat.rs
fish-game-app/src/player/: attributes.rs  render.rs
fish-game-app/src/shared/: arena.rs  collision.rs  game.rs  mod.rs  rng.rs
fish-game-app/src/ui/gamehud/: mod.rs  score.rs
fish-game-app/src/ui/gameover/: leaderboard.rs  message.rs
fish-game-lib/: README.md
fish-game-lib/src/: arena.rs  core2d.rs  lib.rs  player.rs
src/: arena.rs  components.rs  leaderboard.rs  main.rs  player.rs  shared.rs
src/audio/: mod.rs  sfx.rs
src/enemies/: boat.rs  mod.rs
src/objects/: boat.rs  mod.rs
src/player/: animations.rs  attributes.rs  collision.rs  components.rs  events.rs  mod.rs  movement.rs  render.rs  states.rs  systems.rs
src/player/states/: boost.rs  idle.rs  mod.rs  swim.rs
src/shared/: animation.rs  arena.rs  collision.rs  components.rs  game.rs  mod.rs  movement.rs  render.rs  rng.rs  stages.rs  systems.rs
src/ui/: common.rs  game_over.rs  leaderboard.rs  mod.rs  pause.rs  player.rs  score.rs
src/ui/gamehud/: mod.rs  pause.rs  player.rs  score.rs
src/ui/gameover/: leaderboard.rs  message.rs  mod.rs
