[package]
name = "fish-game"
version = "0.1.0"
authors = ["Nigel Haney <nigel.haney27@gmail.com>"]
edition = "2021"

[features]
#default = [
#  "bevy/bevy_gltf",
#  "bevy/bevy_winit",
#  "bevy/render",
#  "bevy/png",
#  "bevy/bevy_audio",
#  "bevy/vorbis",
#]

# different rendering for native vs. web, no official bevy support
#native = [
#  "bevy/bevy_wgpu",
#]

#web = [
#  "bevy_webgl2"
#]

[dependencies]
bevy = { version = "0.13.2" }# features = ["dynamic_linking"] }
bevy_prototype_lyon = "0.11"

rand = "0.8.5"
rand_chacha = "0.3.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# depedencies of bevy that need features enabled for web builds
[dependencies.web-sys]
version = "0.3.4"
features = [
  'Storage',
  'Window',
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
