[package]
name = "fish-game"
version = "0.1.0"
authors = ["Nigel Haney <me@nigelhaney.com>"]
edition = "2021"

[features]

[dependencies]
bevy = { version = "0.13.2" }#,features = ["dynamic_linking"] }
bevy_prototype_lyon = "0.11"

rand = "0.8.5"
rand_chacha = "0.3.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dependencies of WASM build target.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.4", optional = true, features = [ 'Storage', 'Window'] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
